# greenboost-windows

./: ..module-common.o.cmd  .Module.symvers.cmd  .greenboost.ko.cmd  .greenboost.mod.cmd  .greenboost.mod.o.cmd  .greenboost.o.cmd  .modules.order.cmd  CC_BUILD_UVM_SHIM.md  CHANGELOG.md  README.md  greenboost.c  greenboost.ko  greenboost.mod  greenboost.mod.c  greenboost_cuda_shim.c  greenboost_ioctl.h  greenboost_setup.sh  modules.order
.nsca/: repo_profile.md
greenboost_enhanced/exllamav3/: greenboost.py  greenboost_migrate.py  stloader.c
greenboost_enhanced/exllamav3/exllamav3/: greenboost_migrate.py  stloader_uring.cpp
greenboost_enhanced/exllamav3/exllamav3/cache/: greenboost.py
windows-port/: AUDIT_2026_03_26.md  BUILDING.md  CC_GREENBOOST_AUDIT_REMAINING.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  build.ps1  sign.ps1
windows-port/driver/: CMakeLists.txt  greenboost_ioctl_win.h  greenboost_win.c  greenboost_win.h  greenboost_win.inf
windows-port/shim/: CMakeLists.txt  greenboost_cuda.def  greenboost_cuda_shim_win.c  greenboost_cuda_shim_win.h
windows-port/tests/: CMakeLists.txt  test_ioctl.c  test_uvm.c
windows-port/tools/: config.ps1  diagnose.ps1  install.ps1  list-device.ps1
